feat(constants): refactor to use AgeratumConstants for configuration values across components